# linux_programing

./: README.md
devel/hello/: Makefile  Makefile.am  Makefile.in  config.status  hello
devel/hello/autom4te.cache/: output.1  requests  traces.1
devel/hello_2/: Makefile  Makefile.in  config.h  config.status  configure  configure.in  hello  hello.c
devel/hello_2/autom4te.cache/: traces.0
devel/test/: configure.in
devel/test/autom4te.cache/: traces.0t
devel/test/src/: Makefile.am  hello.c
exp_hole/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.in  exp_hole  exp_hole.c  hole.txt
exp_hole/.deps/: exp_hole.Po
exp_hole/autom4te.cache/: output.0  traces.0  traces.1
exp_mmap/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.in  exp_mmap  exp_mmap.c  mmap.txt
exp_mmap/.deps/: exp_mmap.Po
exp_mmap/autom4te.cache/: output.1  traces.0  traces.1
ext_fsstat/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  ext_stat  ext_stat.c
ext_fsstat/.deps/: ext_stat.Po
ext_fsstat/autom4te.cache/: output.1  traces.0  traces.1
ext_hello/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  main  main.c
ext_hello/.deps/: main.Po
ext_hello/autom4te.cache/: output.0  traces.0  traces.1
ext_open/: Makefile  ext03_open_01.c  test
ext_read/: Makefile  ext_read.c  test
ext_seek/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.in  ext_seek  ext_seek.c
ext_seek/.deps/: ext_seek.Po
ext_seek/autom4te.cache/: output.1  traces.0  traces.1
ext_write/: .Makefile.swp  Makefile  ext_write.c  test
