#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT(exp_hole, 1.0, wavelee@outlook.com)
AC_CONFIG_SRCDIR([exp_hole.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(exp_hole,1.0)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_OFF_T
AC_TYPE_SSIZE_T

# Checks for library functions.

AC_OUTPUT(Makefile)
