#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT(exp_stat, 1.0, wavelee@outlook.com)
AC_CONFIG_SRCDIR([ext_stat.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(ext_stat,1.0)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([unistd.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT([Makefile])
